--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 
 body {
   font-family: "Oswald", sans-serif;
+  font-size: 10px;
 }
 
 
@@ -31,6 +32,15 @@ section {
   border-right: 1px solid rgba(151, 151, 151, 0.322);
 }
 
+section:last-of-type {
+  border-right: none;
+}
+
+.scoreboard {
+  height: 340px;
+  text-align: center;
+}
+
 button:not(:last-of-type) {
   margin-bottom: 20px;
 }
@@ -48,6 +58,7 @@ button:not(:last-of-type) {
   outline: none;
   font-family: "Oswald", sans-serif;
   transition: all .3s;
+  font-size: 1.5em;
 }
 
 .btn:hover {
@@ -56,4 +67,24 @@ button:not(:last-of-type) {
 
 .btn:active {
   box-shadow: 0px 1px 4px rgb(167, 167, 167);
+}
+
+.score {
+  padding-bottom: 20px;
+  font-size: 2em;
+  height: 50%;
+}
+
+.pick {
+  font-size: 2.5em;
+}
+
+.winner {
+  height: 340px;
+  text-align: center;
+}
+
+.message {
+  height: 35%;
+  font-size: 2em;
 }
